update config for imu_to_bag seer-ros application

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 allan_node:
   ros__parameters:
-     topic: /imu
+     topic: /imu0
      bag_path: imu_noise.bag
      msg_type: ros
      publish_rate: 200
